@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.3 2018/12/21 06:25:09 wen Exp $
+# $NetBSD: Makefile,v 1.4 2019/07/31 14:58:13 brook Exp $
 
-CATEGORIES=	devel
+CATEGORIES=	devel R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	https://github.com/wch/R6/
-COMMENT=	Classes with reference semantics
+COMMENT=	Encapsulated classes with reference semantics
 LICENSE=	mit
 
 R_PKGNAME=	R6
-R_PKGVER=	2.3.0
+R_PKGVER=	2.4.0
 
 USE_LANGUAGES=	# none
 
-BUILDLINK_API_DEPENDS.R+=	R>=3.0
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
