@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.2 2018/12/21 06:25:09 wen Exp $
+$NetBSD: distinfo,v 1.3 2019/07/31 14:58:13 brook Exp $
 
-SHA1 (R/R6_2.3.0.tar.gz) = 43b4c18c2a1cfdf1188056a085d6d71db160dc3a
-RMD160 (R/R6_2.3.0.tar.gz) = 6018b794e1319a0c1d59c659b990193a62de5b09
-SHA512 (R/R6_2.3.0.tar.gz) = 47aef4bbb80b43f0f4836d51211aa861208d58e5ad63c96ead7f47a34566bf61f86b97849e77f3ffe4153aa9eff3553d9e309a797987d833c6eba54c365adb8d
-Size (R/R6_2.3.0.tar.gz) = 30968 bytes
+SHA1 (R/R6_2.4.0.tar.gz) = 21469ba4e4a891aa0eb1c05378079d08033ee5f8
+RMD160 (R/R6_2.4.0.tar.gz) = 9ea40b4aa8154ee3703a5f9053edca36913c89fd
+SHA512 (R/R6_2.4.0.tar.gz) = a2082f1e3cc1517c89ab257b7cd609042ca5ad58e2e798955a6deb53ff61090ff4d8ee8c2552c57a2914d4d83e76b71ecb081181e4cdda3d336b06c71cadd8e4
+Size (R/R6_2.4.0.tar.gz) = 31545 bytes
