@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3133 2019/07/31 14:56:44 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3134 2019/07/31 14:58:13 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5090,3 +5090,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated databases/R-RSQLite to 2.1.2 [brook 2019-07-31]
 	Updated databases/R-sqldf to 0.4.11 [brook 2019-07-31]
 	Updated devel/R-IRkernel to 1.0.2 [brook 2019-07-31]
+	Updated devel/R-R6 to 2.4.0 [brook 2019-07-31]
